<resources>
    <string name="app_name">Travian Send Troop</string>
    <string name="lb_username">"User Name : "</string>
    <string name="lb_password">"Password : "</string>
    <string name="lb_server">"Server : "</string>
    <string name="lb_login">"login"</string>
    <string name="lb_message">Message:</string>
    <string name="lb_village">"Village : "</string>
    <string name="lb_sendtype">"Send Type : "</string>
    <string name="lb_addtask">Add Task</string>
    <string name="lb_target">target : </string>
    <string name="lb_reachtime">Reach Time : </string>
    <string name="sendtype_2">enforce</string>
    <string name="sendtype_4">snatch</string>
    <string name="sendtype_3">attack</string>
    <string name="log_date_format" translatable="false">yyyy/MM/dd HH:mm:ss</string>
    <string name="lb_proxy">Proxy :</string>
    <string name="lb_use">Use</string>
    <string name="lb_clearmessage">Clear</string>
    <string name="lb_target1">Target1 : </string>
    <string name="lb_target2">Target2 : </string>
    <string name="target_1">Sawmill</string>
    <string name="target_2">Clay minerals</string>
    <string name="target_3">Iron ore field</string>
    <string name="target_4">Farm</string>
    <string name="target_5">Timber factory</string>
    <string name="target_6">Brick factory</string>
    <string name="target_7">Foundry</string>
    <string name="target_8">Mill</string>
    <string name="target_9">Bakery</string>
    <string name="target_10">Warehouse</string>
    <string name="target_11">Granary</string>
    <string name="target_12">Blacksmith</string>
    <string name="target_13">Armory</string>
    <string name="target_14">Arena</string>
    <string name="target_15">Center Building</string>
    <string name="target_16">Assembly point</string>
    <string name="target_17">Market</string>
    <string name="target_18">Embassy</string>
    <string name="target_19">Barracks</string>
    <string name="target_20">Stable</string>
    <string name="target_21">Workshop</string>
    <string name="target_22">R&amp;D ins</string>
    <string name="target_24">Town Hall</string>
    <string name="target_25">Palace</string>
    <string name="target_26">K Palace</string>
    <string name="target_27">Treasure house</string>
    <string name="target_28">Exchange</string>
    <string name="target_29">L barracks</string>
    <string name="target_30">L Stable</string>
    <string name="target_37">Hero Park</string>
    <string name="target_39">L granary</string>
    <string name="target_38">L warehouse</string>
    <string name="target_41">Grazing</string>
    <string name="target_99">Random</string>
</resources>
