<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:id="@+id/activity_message">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lb_server"
        android:id="@+id/lb_servers"
        android:textSize="20sp"
        android:gravity="end"
        android:layout_alignRight="@+id/lb_username"
        android:layout_alignEnd="@+id/lb_username"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textAlignment="textEnd" />

    <TextView
        android:text="@string/lb_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lb_servers"
        android:gravity="end"
        android:textAlignment="textEnd"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:id="@+id/lb_username"
        android:textSize="20sp" />

    <TextView
        android:text="@string/lb_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lb_username"
        android:gravity="end"
        android:textAlignment="textEnd"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:id="@+id/lb_password"
        android:textSize="20sp"
        android:layout_alignRight="@+id/lb_username"
        android:layout_alignEnd="@+id/lb_username" />
    <TextView
        android:text="@string/lb_proxy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lb_password"
        android:gravity="end"
        android:textAlignment="textEnd"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:id="@+id/lb_Proxy"
        android:textSize="14sp"
        android:layout_toLeftOf="@+id/txt_password"
        android:layout_toStartOf="@+id/txt_password" />
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/lb_servers"
        android:layout_toEndOf="@+id/lb_servers"
        android:id="@+id/lst_server"
        android:textSize="20sp"
        android:entries="@array/ServerList"
        android:background="@android:color/darker_gray"
        android:layout_above="@+id/lb_username" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_toRightOf="@+id/lb_username"
        android:layout_toEndOf="@+id/lb_username"
        android:id="@+id/txt_username"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/lb_username"
        android:layout_above="@+id/lb_password"
        android:textSize="20sp"
        android:background="@android:color/darker_gray" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_alignTop="@+id/lb_password"
        android:layout_toRightOf="@+id/lb_password"
        android:layout_toEndOf="@+id/lb_password"
        android:id="@+id/txt_password"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignBottom="@+id/lb_password"
        android:background="@android:color/darker_gray"
        android:textSize="20sp" />

    <Button
        android:text="@string/lb_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_login"
        android:layout_below="@+id/lb_Proxy"
        android:layout_toRightOf="@+id/lb_Proxy"
        android:layout_toEndOf="@+id/lb_Proxy"
        android:layout_marginTop="10dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textUri"
        android:ems="10"
        android:textSize="12sp"
        android:layout_alignTop="@+id/lb_Proxy"
        android:layout_toRightOf="@+id/lb_Proxy"
        android:layout_toEndOf="@+id/lb_Proxy"
        android:id="@+id/txt_proxyhost"
        android:background="@android:color/darker_gray"
        android:layout_alignBottom="@+id/lb_Proxy"
        android:text="http://16.216.235.20:8080" />

    <CheckBox
        android:text="@string/lb_use"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/lb_Proxy"
        android:layout_toRightOf="@+id/txt_proxyhost"
        android:layout_toEndOf="@+id/txt_proxyhost"
        android:layout_alignBottom="@+id/lb_Proxy"
        android:textSize="10sp"
        android:id="@+id/chkProxy" />
</RelativeLayout>